tests/fail/draw_call.frac
gram koch = {
    alphabet: [F, p, m],
    init: 'F p p F p p F',
    rules: {
        'F' -> 'F m F p p F m F',
        'F' -> move(1),
        'm' -> rturn(60),
        'p' -> lturn(60)
    }
}

foo(int x) {
  print(2);
  draw(koch, x);
}

main() {
  foo(2);
}
